fix(loom): L2 edges disappear on zoom; add schema/pkg in RoutineNode; drill Routine→L3; cross-schema routines in AGG
Bug fixes and L2 enhancements:

1. displayPipeline: applyCfEdgeToggle skips loom-flow/loom-cf tagging when
   no CF column-level edges exist in the graph (L2 AGG has none), preventing
   READS_FROM/WRITES_TO arrows from disappearing when zoomed past LOD threshold.

2. RoutineNode: header now shows schema_geoid and package_geoid breadcrumb
   above the routine name, plus a PROC/FUNC/PKG kind badge (same style as
   StatementNode operation badge).

3. navigationSlice: clicking a Routine in L2 AGG now transitions to
   viewLevel='L3' (not stays at L2) with routineAggregate=false — the EXP
   explore view showing all statements in that routine. L3 EXP + Statement
   click still proceeds to L4 statement-drill.

4. useGraphData: exploreQ is now enabled for L3 with !routineAggregate;
   lineageQ is enabled for L3 with routineAggregate=true (direct navigation).
   stmtIds enrichment and stmtColsReady logic extended to cover L3 EXP.

5. ExploreService.exploreRoutineAggregate: Cypher now returns r.schema_geoid,
   r.package_geoid, r.routine_type so buildResult populates node.scope and
   node.meta (packageName, routineType) for each DaliRoutine.
   New parallel extQuery fetches routines from OTHER schemas that read/write
   tables in the current scope — gives a complete cross-schema flow picture.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>